force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Accreditation_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Accreditation_Date__c</fullName>
    <description>Date accreditation verified</description>
    <label>Accreditation Date</label>
    <type>Date</type>
</CustomField>