force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Accreditation_Status__c</fullName>
    <description>Investor accreditation</description>
    <label>Accreditation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited</fullName>
                <default>true</default>
                <label>Accredited</label>
            </value>
            <value>
                <fullName>Qualified Purchaser</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Not Accredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>