force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_AML_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_AML_Verified_Date__c</fullName>
    <label>AML Verified Date</label>
    <description>Anti-Money Laundering verification date</description>
    <type>Date</type>
</CustomField>