force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Email__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Email__c</fullName>
    <description>Primary email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>