force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Investor_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investor_Status__c</fullName>
    <label>Status</label>
    <description>Current investor status</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>