force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investor_Type__c</fullName>
    <label>Investor Type</label>
    <description>Category of investor</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pension Fund</fullName>
            </value>
            <value>
                <fullName>Endowment</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth Fund</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>