force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_KYC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_KYC_Completed_Date__c</fullName>
    <description>Know Your Customer completion date</description>
    <label>KYC Completed Date</label>
    <type>Date</type>
</CustomField>