force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Legal_Entity_Type__c</fullName>
    <description>Legal structure</description>
    <label>Legal Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>