force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <description>Full mailing address</description>
    <type>TextArea</type>
</CustomField>