force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Notes__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Notes__c</fullName>
    <description>General notes and preferences</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>