force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_OTP__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_OTP__c</fullName>
    <description>One-Time Password for LP data access</description>
    <label>OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>