force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_OTP_Expiry__c</fullName>
    <description>OTP Expiry DateTime for LP data access</description>
    <label>OTP Expiry</label>
    <type>DateTime</type>
</CustomField>