force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Phone__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Phone__c</fullName>
    <label>Phone</label>
    <description>Primary phone number</description>
    <type>Phone</type>
</CustomField>