force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this investor record to a portal user (Limited Partner) who can access their own data. Used for record-level sharing in the LP portal.</description>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SK_ACH_Investors</relationshipName>
    <type>Lookup</type>
</CustomField>