force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Primary_Contact_Name__c</fullName>
    <description>Main point of contact</description>
    <label>Primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>