force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Tax_ID_Number__c</fullName>
    <label>Tax ID Number</label>
    <description>Tax identification number (EIN/SSN)</description>
    <type>Text</type>
    <length>50</length>
</CustomField>