force-app/main/default/objects/SK_ACH_Investor__c/fields/SK_ACH_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Tax_Status__c</fullName>
    <label>Tax Status</label>
    <description>Tax classification</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax-Exempt</fullName>
            </value>
            <value>
                <fullName>Taxable Domestic</fullName>
            </value>
            <value>
                <fullName>Taxable Foreign</fullName>
            </value>
            <value>
                <fullName>UBTI Subject</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>