force-app/main/default/objects/SK_ACH_Investor__c/listViews/Active_Investors.listView-meta.xml
<ListView>
    <fullName>Active_Investors</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Investor_Type__c</columns>
    <columns>SK_ACH_Legal_Entity_Type__c</columns>
    <columns>SK_ACH_Country__c</columns>
    <columns>SK_ACH_Primary_Contact_Name__c</columns>
    <columns>SK_ACH_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SK_ACH_Investor_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Investors</label>
</ListView>