force-app/main/default/objects/SK_ACH_Investor__c/listViews/Leads_Converted_Investors.listView-meta.xml
<ListView>
    <fullName>Leads_Converted_Investors</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Leads Converted Investors</label>
</ListView>